--- a/website_v2/css/style.css
+++ b/website_v2/css/style.css
@@ -126,7 +126,7 @@ form {
     font-weight: bold;
 }
 
-/* secção pre */
+/* secção pre s*/
 .section-pre {
     background-color: #001B18;
     color: white;
