--- a/website_v2/css/style.css
+++ b/website_v2/css/style.css
@@ -1,3 +1,7 @@
+a {
+    text-decoration: none;
+}
+
 .carouselExampleControls {
     height: 700px;
 }
@@ -134,6 +138,14 @@ form {
 
 .section-pre svg {
     width: 100%;
+}
+
+.section-pre .nav-link {
+    color: white;
+}
+
+.section-pre .nav-link:hover {
+    color: rgba(255, 255, 255, 0.507);
 }
 
 footer {
