--- a/css/style.css
+++ b/css/style.css
@@ -2,101 +2,14 @@ a {
     text-decoration: none;
 }
 
-.menu-black {
-    background-color: black !important;
-}
-
-.carouselExampleControls {
-    height: 700px;
-}
-
-.carousel-caption {
-    display: flex;
-    justify-content: center; /* Alinha horizontalmente */
-    align-items: left; /* Alinha verticalmente */
-    flex-direction: column;
-    position: absolute;
-    top: 50%;
-    right: 10%;
-    transform: translateY(-50%);
-    text-align: left;
-    color: white;
-    max-width: 40%;
-}
-
-.carousel-item {
-    height: 600px; /* Define a altura para 60% da tela */
-}
-
-.carousel-item img {
-    height: 100%; /* Faz a imagem ocupar toda a altura do slide */
-    object-fit: cover; /* Mantém a proporção e cobre toda a área */
-}
-
-.radius-bottom {
-    width: 50px;  /* Define um tamanho fixo */
-    height: 50px;
-    border-radius: 50%; /* Deixa circular */
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro translúcido */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.carousel-control-prev-icon, 
-.carousel-control-next-icon {
-    width: 20px;  /* Ajusta o tamanho do ícone */
-    height: 20px;
-}
-
 .overlay {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: radial-gradient(circle, rgba(0, 0, 0, 0.37) 10%, rgba(0, 0, 0, 0.548) 70%);
-  
-  }
-
-.container-valores {    
-    color: white;
-    border-top-right-radius: 40px;
-    border-bottom-left-radius: 40px;
+    background: radial-gradient(circle, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.548) 80%);
 }
 
-.valores {
-    background-color: #00633C;
-    border-top-right-radius: 40px;
-}
-
-.visao {
-    background-color: #0B8045;
-}
-
-.missao {
-    background-color: #269E37;
-    border-bottom-left-radius: 40px;
-}
-
-/* Serviços */
-.card {
-    padding: 0;
-    border-radius: 1.25rem;
-}
-
-.card-service {
-    height: 100%;
-    cursor: pointer;
-}
-
-.card-service img, .card {
-    border-top-left-radius: 15px;  /* Arredonda a borda superior esquerda */
-    border-top-right-radius: 15px; /* Arredonda a borda superior direita */
-}
-
-.card-service .card-body {
-    background-color: #ffffff;
-    border-radius: 30px;
-}
+/* Fale conosco */
 
 .section-contato {
     background-color: #002222;
@@ -134,28 +47,28 @@ form {
     font-weight: bold;
 }
 
-/* secção pre s*/
-.section-pre {
-    background-color: #001B18;
-    color: white;
-}
+/* footer */
 
 .section-pre svg {
     width: 100%;
 }
 
+
 .section-pre .nav-link {
     color: white;
 }
 
+
+/*
 .contatos-whatsapp .nav-link:hover {
     opacity: 50%;
 }
-
+*/
+/*
 .contatos-whatsapp h3 {
     font-size: 1.75rem;
 }
-
+*/
 .contatos-whatsapp svg {
     width: 2rem;
     height  : 2rem;
@@ -165,22 +78,15 @@ form {
     padding: 0;
 }
 
+/*
 .menu-contatos a:hover {
     opacity: 50%;
 }
+*/
 
 footer {
     background-color: #001B18;
     color: white;
     text-align: center;
-    padding: 30px 0;
-    font-size: 14px;
-}
-
-/* Test */
-
-.section-especialista {
-    border-radius: 30px;
-    background:
-    linear-gradient(30deg, #00633c 30%, #26c00772 70%), url(https://blog.verde.ag/pt/wp-content/uploads/2023/11/Lavoura-de-milho-como-melhorar-a-fertilidade-do-solo.jpg) no-repeat
+    padding-bottom: 30px;
 }
