--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,9 @@ footer {
     text-align: center;
     padding-bottom: 30px;
 }
+
+@media (max-width: 768px) {
+  footer h5 {
+    font-size: 16px;
+  }
+}
