--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ a {
     text-decoration: none;
 }
 
+ul, ol {
+    list-style: none;
+}
+
 main {
     justify-items: center;
 }
@@ -23,6 +27,75 @@ main {
 
 .container {
     max-width: 1200px;
+}
+
+/* Header */
+
+.navbar-s {
+    background-color: black;
+    padding: 0 10px;
+}
+
+.navbar-container-s {
+    width: 100%;
+    max-width: 1600px;
+    height: 56px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header li a {
+    color: white;
+}
+
+.navbar-brand-s img {
+    height: 20px;
+}
+
+.navbar-menu-s {
+  display: flex;
+  gap: 2rem;
+  list-style: none;
+  margin: 10px;
+}
+
+.navbar-toggle-s {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  color: #fff;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .navbar-toggle-s {
+    display: block;
+  }
+
+  .navbar-menu-s {
+    position: absolute;
+    top: 56px;
+    right: 0;
+    background-color: #111;
+    flex-direction: column;
+    width: 60%;
+    padding: 1rem 0;
+    margin: 0;
+    display: none;
+    z-index: 100;
+  }
+
+  .navbar-menu-s li {
+    text-align: center;
+    padding: 0.75rem 0;
+  }
+
+  .navbar-menu-s.active {
+    display: flex;
+  }
 }
 
 /* Missão, valores e visão */
@@ -75,7 +148,6 @@ div > section {
     color: white;
     padding: 3rem;
     border-radius: 30px;
-    text-align: justify;
 }
 
 #section_especialista h2 {
