--- a/css/style.css
+++ b/css/style.css
@@ -554,13 +554,16 @@ form {
 @media (min-width: 540px) {
     /* Regras de expansão de colunas no Grid Desktop */
     .input-box:nth-child(1) { grid-column: span 2; } /* Nome ocupa a largura total */
-    .input-box:nth-child(2) { grid-column: span 2; } /* Cidade ocupa a largura total */
+    .input-box:nth-child(2) { grid-column: span 1; } /* E-mail ocupa a largura total */
     .input-box:nth-child(3) { grid-column: span 1; } /* UF ocupa metade */
     .input-box:nth-child(4) { grid-column: span 1; } /* Cidade ocupa metade */
-    .input-box:nth-child(5) { 
+    .input-box:nth-child(5) { grid-column: span 1; } /* Telefone ocupa a largura total */
+    .input-box:nth-child(6) { 
         grid-column: span 2;                        /* Mensagem ocupa a largura total */
-        display: flex;
-        flex-direction: column;
+    }
+
+    .input-box textarea {
+        min-height: 150px;
     }
 
 }
