--- a/css/style.css
+++ b/css/style.css
@@ -426,9 +426,9 @@ form {
 
 /* --- COLUNA DA ESQUERDA (Destaque/Imagem) --- */
 .form-content-left {
-    display: grid;
+    display: flex;
     background-color: var(--color-light);
-    padding: 30px;               /* Espaçamento interno para o conteúdo não encostar nas bordas */
+    padding: 5px;               
     justify-items: center;      /* Centraliza a imagem e o texto horizontalmente */
     align-items: start;        /* Centraliza o conteúdo verticalmente */
     flex: 1;                    /* Faz esta coluna ocupar espaço proporcional no flexbox */;
@@ -437,13 +437,14 @@ form {
 .form-image img {
     max-width: 100%;
     height: auto;
-    width: 300px;               /* Define a largura ideal para o mapa/logo */
+    width: 400px;               
 }
+
 
 .form-content-left h3 {
     color: var(--color-dark);
     padding: 10px;
-    font-size: 1.8rem;
+    font-size: 1rem;
     text-transform: uppercase;
     letter-spacing: 1px;        /* Afastamento entre letras para estética corporativa */
     text-align: center;
@@ -451,6 +452,7 @@ form {
 
 .form-content-left p {
     text-align: center;
+    font-size: 0.7rem;
 }
 
 /* --- ÁREA DO FORMULÁRIO (Direita) --- */
@@ -549,15 +551,38 @@ form {
 }
 
 @media (min-width: 540px) {
+
+    .form-content-left {
+        background-color: var(--color-light);
+        padding: 10px;               
+        justify-items: center;      
+        align-items: center;        
+        flex: 1;                    /* Faz esta coluna ocupar espaço proporcional no flexbox */;
+    }
+
+    .form-content-left h3 {
+        padding: 10px;
+        font-size: 1.5rem; 
+    }
+
+    .form-content-left p {
+        text-align: center;
+        font-size: 1rem;
+    }
+
+    .form-image img {
+        max-width: 100%;
+        height: auto;
+        width: 300px;               /* Define a largura ideal para o mapa/logo */
+    }
+
     /* Regras de expansão de colunas no Grid Desktop */
     .input-box:nth-child(1) { grid-column: span 2; } /* Nome ocupa a largura total */
     .input-box:nth-child(2) { grid-column: span 1; } /* E-mail ocupa a largura total */
     .input-box:nth-child(3) { grid-column: span 1; } /* UF ocupa metade */
     .input-box:nth-child(4) { grid-column: span 1; } /* Cidade ocupa metade */
     .input-box:nth-child(5) { grid-column: span 1; } /* Telefone ocupa a largura total */
-    .input-box:nth-child(6) { 
-        grid-column: span 2;                        /* Mensagem ocupa a largura total */
-    }
+    .input-box:nth-child(6) { grid-column: span 2; }
 
     .input-group {
         row-gap: 0.5rem;
