--- a/css/style.css
+++ b/css/style.css
@@ -199,9 +199,9 @@ div>section {
 }
 
 .section-equipes-projetos {
-    border-radius: 16px;
+    /*border-radius: 16px;
     border: 1px solid rgba(0, 0, 0, .125);
-    padding: 1.5rem;
+    padding: 1.5rem;*/
 }
 
 .section-equipes {
