--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,6 @@ main {
     z-index: 1000;
 }
 
-
-
 .navbar-brand-s img {
     color: #fff;
 }
@@ -103,7 +101,7 @@ header li a {
         display: flex;
         max-width: 0;
         overflow: hidden;
-        transition: max-width 0.5s ease-in-out padding 0.6s ease;
+        transition: max-height 0.5s ease-in-out, padding 0.4s ease;
         z-index: 100;
     }
 
@@ -227,11 +225,11 @@ div>section {
     padding: 0.4rem;
 }
 
-.section-equipes-projetos {
-    /*border-radius: 16px;
+/* .section-equipes-projetos {
+    border-radius: 16px;
     border: 1px solid rgba(0, 0, 0, .125);
-    padding: 1.5rem;*/
-}
+    padding: 1.5rem;
+} */
 
 .section-equipes {
     display: grid;
